@@ -6,3 +6,8 @@
 <p>Username: {{ username }}</p>
 <p>Display Name: {{ display_name }}</p>
 <p>Email: {{ email }}</p>
+
+<form method="POST" action="{% url 'logout' %}">
+    {% csrf_token %}
+    <button type="submit">Logout</button>
+</form>
